--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,30 @@
-requests
-beautifulsoup4
-fuzzywuzzy
-deepdiff
-sqlalchemy
+beautifulsoup4==4.12.3
+blinker==1.8.2
+bs4==0.0.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+deepdiff==8.0.1
+Flask==3.0.3
+Flask-Cors==5.0.0
+fuzzywuzzy==0.18.0
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Levenshtein==0.26.0
+MarkupSafe==3.0.2
+orderly-set==5.2.2
+packaging==24.1
+pluggy==1.5.0
+pyodbc==5.2.0
+pytest==8.3.3
+python-dotenv==1.0.1
+python-Levenshtein==0.26.0
+RapidFuzz==3.10.0
+requests==2.32.3
+soupsieve==2.6
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+urllib3==2.2.3
+Werkzeug==3.0.4
