--- a/frontend-production/package.json
+++ b/frontend-production/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.11.9",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
