--- a/backend/db/azure.env
+++ b/backend/db/azure.env
@@ -3,6 +3,6 @@ DB_SERVER=gdpserver.database.windows.net
 DB_DATABASE=GDP Database
 DB_USER=GDPAdmin
 DB_PASSWORD=GDPAdm1nPassword
-DB_ENCRYPT=True
-DB_TRUST_SERVER_CERTIFICATE=False
+DB_ENCRYPT=yes
+DB_TRUST_SERVER_CERTIFICATE=no
 DB_MULTIPLE_ACTIVE_RESULT_SETS=False
