--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -18,6 +18,7 @@
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-force-graph": "^1.44.6",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "reagraph": "^4.19.5",
