Added llmNew containing new LLM + search code. Updated env, prompt and requirements files.

--- a/backend/llm/llm.env
+++ b/backend/llm/llm.env
@@ -1,4 +1,4 @@
-AZURE_OPENAI_ENDPOINT=<Azure OpenAI Endpoint>
-AZURE_OPENAI_KEY=<Azure OpenAI Key>
-AZURE_OPENAI_DEPLOYMENT_NAME=<Azure OpenAI Deployment Name>
-SERPAPI_KEY=<SerpAPI Key for google search>
+AZURE_OPENAI_ENDPOINT=https://proj-gpt-dev.openai.azure.com
+AZURE_OPENAI_KEY=c5bbc229e53e449f96378cec96bd1f78
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
+AZURE_API_VERSION=2024-02-15-preview
