Add the regeneration summary part

--- a/frontend-v2/tsconfig.json
+++ b/frontend-v2/tsconfig.json
@@ -30,7 +30,8 @@
     "components/modal/NetworkModal.jsx",
     "components/editor/EditorContext.jsx",
     "components/modal/EditorModal.jsx",
-    "components/summary/SelectableSummary.tsx"
+    "components/summary/SelectableSummary.tsx",
+    "components/summary/RegenerateCard.jsx"
   ],
   "exclude": ["node_modules"]
 }
