--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "^18.3.1",
