Add network graph on summary page
It is now working but the styling will leave it to Yuqing to style it further

--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -34,6 +34,7 @@
     "reagraph": "^4.19.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three-spritetext": "^1.9.0",
     "tiptap-markdown": "^0.8.10",
     "zustand": "^5.0.1"
   },
