--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ anyio==4.6.2.post1
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
+Brotli==1.1.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -37,8 +38,11 @@ Levenshtein==0.26.1
 MarkupSafe==3.0.2
 mpmath==1.3.0
 multidict==6.1.0
+nest-asyncio==1.6.0
 networkx==3.4.2
-numpy==2.1.3
+nltk==3.9.1
+node2vec==0.5.0
+numpy==1.26.4
 openai==1.54.3
 orderly-set==5.2.2
 packaging==24.1
@@ -47,9 +51,11 @@ pillow==11.0.0
 pluggy==1.5.0
 primp==0.7.0
 propcache==0.2.0
+psutil==6.1.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyodbc==5.2.0
+pyparsing==3.2.0
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -69,9 +75,11 @@ sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
 sympy==1.13.1
+textblob==0.18.0.post0
 threadpoolctl==3.5.0
 tokenizers==0.20.3
 torch==2.5.1
+torch-geometric==2.6.1
 tqdm==4.67.0
 transformers==4.46.3
 typing_extensions==4.12.2
