--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@tiptap/extension-bullet-list": "^2.10.3",
+    "@tiptap/extension-ordered-list": "^2.10.3",
+    "@tiptap/extension-underline": "^2.10.3",
     "flowbite-react": "^0.10.2",
     "next": "^15.0.3",
     "react-force-graph-3d": "^1.24.5",
