--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -26,6 +26,7 @@
     "flowbite-react": "^0.10.2",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.44.6",
@@ -40,7 +41,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
