--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "flowbite-react": "^0.10.2",
     "next": "^15.0.3",
+    "next-auth": "^4.24.10",
     "react-force-graph-3d": "^1.24.5",
     "react-markdown": "^9.0.1"
   },
