- reworked the improvement pen logic - made sure the format of the text in edit mode mirrors the format of the summary when no in edit mode

--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tiptap/extension-highlight": "^2.9.1",
+    "@tiptap/extension-list-item": "^2.10.3",
+    "@tiptap/extension-paragraph": "^2.10.3",
     "@tiptap/extension-typography": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
@@ -25,6 +27,7 @@
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
     "lucide-react": "^0.454.0",
+    "marked": "^15.0.3",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
