--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tiptap/extension-bubble-menu": "^2.10.3",
     "@tiptap/extension-bullet-list": "^2.10.3",
     "@tiptap/extension-heading": "^2.10.3",
     "@tiptap/extension-link": "^2.10.3",
