--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -15,8 +15,12 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tiptap/extension-bullet-list": "^2.10.3",
+    "@tiptap/extension-heading": "^2.10.3",
     "@tiptap/extension-highlight": "^2.9.1",
+    "@tiptap/extension-link": "^2.10.3",
     "@tiptap/extension-list-item": "^2.10.3",
+    "@tiptap/extension-ordered-list": "^2.10.3",
     "@tiptap/extension-paragraph": "^2.10.3",
     "@tiptap/extension-typography": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
