--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "dependencies": {
-    "@tiptap/extension-bubble-menu": "^2.10.3",
-    "@tiptap/extension-bullet-list": "^2.10.3",
-    "@tiptap/extension-heading": "^2.10.3",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/extension-ordered-list": "^2.10.3",
+    "@reactour/tour": "^3.7.0",
     "@tiptap/extension-underline": "^2.10.3",
     "flowbite-react": "^0.10.2",
+    "js-cookie": "^3.0.5",
     "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-force-graph-3d": "^1.24.5",
+    "react-joyride": "^2.9.3",
     "react-markdown": "^9.0.1",
-    "rehype-parse": "^9.0.1",
-    "rehype-raw": "^7.0.0",
-    "rehype-remark": "^10.0.0",
-    "rehype-stringify": "^10.0.1",
-    "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1",
-    "remark-stringify": "^11.0.0",
-    "unified": "^11.0.5"
+    "reactour": "^1.19.4"
   },
   "devDependencies": {
     "concurrently": "^9.0.1",
