--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -23,6 +23,7 @@
     "@tiptap/extension-ordered-list": "^2.10.3",
     "@tiptap/extension-paragraph": "^2.10.3",
     "@tiptap/extension-typography": "^2.9.1",
+    "@tiptap/extension-underline": "^2.10.3",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
@@ -39,7 +40,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-shepherd": "^6.1.6",
     "reagraph": "^4.19.5",
+    "shepherd.js": "^14.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three-spritetext": "^1.9.0",
