- Added an export button, so user can export summary as HTML or Markdown - Add an alert when you click the save button at the button of the page

--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -30,11 +30,17 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "docx": "^9.1.0",
+    "file-saver": "^2.0.5",
     "flowbite-react": "^0.10.2",
+    "html-to-docx": "^1.8.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.454.0",
     "marked": "^15.0.3",
     "next": "15.0.2",
     "react": "^18.3.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.44.6",
     "react-hot-toast": "^2.4.1",
