--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
 Brotli==1.1.0
+build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -22,7 +23,12 @@ Flask-Cors==5.0.0
 frozenlist==1.5.0
 fsspec==2024.10.0
 fuzzywuzzy==0.18.0
+gensim==4.3.3
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
 httpx==0.27.2
+huggingface-hub==0.27.0
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
@@ -51,6 +57,7 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pyodbc==5.2.0
 pyparsing==3.2.0
+pyproject_hooks==1.2.0
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
