--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.11.7
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+async-timeout==5.0.1
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
@@ -16,6 +17,7 @@ click==8.1.7
 deepdiff==8.0.1
 distro==1.9.0
 duckduckgo_search==6.3.4
+exceptiongroup==1.2.2
 fake-useragent==1.5.1
 filelock==3.16.1
 Flask==3.0.3
@@ -55,7 +57,7 @@ propcache==0.2.0
 psutil==6.1.0
 pydantic==2.9.2
 pydantic_core==2.23.4
-pyodbc==5.2.0
+pymssql==2.3.2
 pyparsing==3.2.0
 pyproject_hooks==1.2.0
 pytest==8.3.3
@@ -80,6 +82,7 @@ sympy==1.13.1
 textblob==0.18.0.post0
 threadpoolctl==3.5.0
 tokenizers==0.20.3
+tomli==2.2.1
 torch==2.2.2
 torch-geometric==2.6.1
 tqdm==4.67.0
