--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ charset-normalizer==3.4.0
 click==8.1.7
 deepdiff==8.0.1
 distro==1.9.0
-duckduckgo_search==6.3.4
+duckduckgo_search==7.2.1
 exceptiongroup==1.2.2
 fake-useragent==1.5.1
 filelock==3.16.1
@@ -38,6 +38,7 @@ Jinja2==3.1.4
 jiter==0.7.0
 joblib==1.4.2
 Levenshtein==0.26.1
+lxml==5.3.0
 MarkupSafe==3.0.2
 mpmath==1.3.0
 multidict==6.1.0
@@ -52,7 +53,7 @@ packaging==24.1
 pandas==2.2.3
 pillow==11.0.0
 pluggy==1.5.0
-primp==0.7.0
+primp==0.10.0
 propcache==0.2.0
 psutil==6.1.0
 pydantic==2.9.2
