Modified workflow file

--- a/.github/workflows/main_acm.yml
+++ b/.github/workflows/main_acm.yml
@@ -1,13 +1,14 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - acm
+name: Build and deploy Python app to Azure Web App - acmbackend
 
 on:
   push:
     branches:
       - main
+    paths:
+      - "backend/**" # Only trigger on changes in backend folder
   workflow_dispatch:
 
 jobs:
@@ -20,37 +21,42 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
+
+      - name: Change to backend directory
+        run: cd backend
 
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
-        
+        run: |
+          cd backend
+          pip install -r requirements.txt
+
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd backend
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
           path: |
-            release.zip
-            !venv/
+            backend/release.zip
+            !backend/venv/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -61,18 +67,10 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1A9A0C6EED3747639EFD2641FA672B8B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9C71E983F303432FAD7ABB7DE6922506 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E6261A9C02574529883ACAD6B00DDFD6 }}
-
-      - name: 'Deploy to Azure Web App'
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'acm'
-          slot-name: 'Production'
-          
+          app-name: "acmbackend"
+          slot-name: "Production"
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_94e7bb1368ea4b789964c16922581a80 }}
