--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.11.7
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+async-timeout==5.0.1
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
@@ -15,7 +16,8 @@ charset-normalizer==3.4.0
 click==8.1.7
 deepdiff==8.0.1
 distro==1.9.0
-duckduckgo_search==6.3.4
+duckduckgo_search==7.2.1
+exceptiongroup==1.2.2
 fake-useragent==1.5.1
 filelock==3.16.1
 Flask==3.0.3
@@ -36,6 +38,7 @@ Jinja2==3.1.4
 jiter==0.7.0
 joblib==1.4.2
 Levenshtein==0.26.1
+lxml==5.3.0
 MarkupSafe==3.0.2
 mpmath==1.3.0
 multidict==6.1.0
@@ -50,12 +53,12 @@ packaging==24.1
 pandas==2.2.3
 pillow==11.0.0
 pluggy==1.5.0
-primp==0.7.0
+primp==0.10.0
 propcache==0.2.0
 psutil==6.1.0
 pydantic==2.9.2
 pydantic_core==2.23.4
-pyodbc==5.2.0
+pymssql==2.3.2
 pyparsing==3.2.0
 pyproject_hooks==1.2.0
 pytest==8.3.3
@@ -80,6 +83,7 @@ sympy==1.13.1
 textblob==0.18.0.post0
 threadpoolctl==3.5.0
 tokenizers==0.20.3
+tomli==2.2.1
 torch==2.2.2
 torch-geometric==2.6.1
 tqdm==4.67.0
