Modified workflow to include azure login

--- a/.github/workflows/main_acm.yml
+++ b/.github/workflows/main_acm.yml
@@ -1,7 +1,8 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
+# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - acmbackend
+name: Build and deploy Python app to Azure Web App - acm
 
 on:
   push:
@@ -23,11 +24,9 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Change to backend directory
-        run: cd backend
-
       - name: Create and start virtual environment
         run: |
+          cd backend
           python -m venv venv
           source venv/bin/activate
 
@@ -57,6 +56,8 @@ jobs:
     environment:
       name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -67,10 +68,16 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1A9A0C6EED3747639EFD2641FA672B8B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9C71E983F303432FAD7ABB7DE6922506 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E6261A9C02574529883ACAD6B00DDFD6 }}
+
       - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: "acmbackend"
+          app-name: "acm"
           slot-name: "Production"
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_94e7bb1368ea4b789964c16922581a80 }}
