Fixed workflow file again

--- a/.github/workflows/main_acm.yml
+++ b/.github/workflows/main_acm.yml
@@ -79,5 +79,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: "acm"
+          app-name: "acmbackend"
           slot-name: "Production"
