Add changes to the tsconfig.json as well

--- a/frontend-v2/tsconfig.json
+++ b/frontend-v2/tsconfig.json
@@ -34,7 +34,7 @@
     "components/modal/EditorModal.jsx",
     "components/summary/SelectableSummary.tsx",
     "components/summary/RegenerateCard.jsx",
-    "../middleware.ts"
+    "middleware.ts"
   ],
   "exclude": ["node_modules"]
 }
